# handless

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  noxfile.py  pyproject.toml  snippet.py  tasks.py
.github/workflows/: cd.yml  ci.yml
doc/examples/: complete.py
src/containers/: container.py  descriptor.py  registry.py
src/handless/: __init__.py  _binding.py  _bindings.py  _container.py  _descriptor.py  _lifetime.py  _lifetimes.py  _provider.py  _registrations.py  _registry.py  _utils.py  binder.py  container.py  containers.py  context.py  descriptor.py  exceptions.py  lifetimes.py  providers.py  registry.py
src/handless/registry/: inversify.py  windsor_like.py
tests/: assertions.py  conftest.py  helpers.py  test_container.py  test_context_managers.py  test_decorators.py  test_descriptors.py  test_register.py  test_register_resolve.py  test_register_resolve_alias.py  test_register_resolve_factory.py  test_register_resolve_value.py  test_registry.py  test_resolve.py  test_resolve_alias.py  test_resolve_async.py  test_resolve_factory.py  test_resolve_provider.py  test_resolve_self.py  test_resolve_value.py
tests/container/: conftest.py  test_container.py  test_register_resolve_value.py  test_resolve.py  test_resolve_alias.py  test_resolve_any_factory.py  test_resolve_factory.py  test_resolve_implementation.py  test_resolve_scoped.py  test_resolve_singleton.py  test_resolve_transient.py  test_resolve_value.py  test_value.py
tests/registry/: conftest.py  test_decorators.py  test_register.py  test_register_alias.py  test_register_factory.py  test_register_implementation.py  test_register_scoped.py  test_register_singleton.py  test_register_value.py  test_registry.py  test_set.py  test_test_override.py
